--- a/products/templates/products/view_product.html
+++ b/products/templates/products/view_product.html
@@ -34,6 +34,7 @@
                 £{{product.price}}
             </p>
             <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
+            <!-- <form class="form" action="javascript:alert( 'success!' );" method="POST"> -->
                 {% csrf_token %}
                 <div class="form-row">
                     <div class="col-12">
