--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -64,8 +64,8 @@
                                 </div>
                             </form> -->
 
-                            <!-- <form class="form update-form_{{item.product.id}}" method="POST" action="{% url 'adjust_bag' item.product.id  %}"> -->
-                            <form class="form update-form" method="POST" action="javascript:alert( 'success!' );"> 
+                            <form class="form update-form" method="POST" action="{% url 'adjust_bag' item.product.id  %}">
+                            <!-- <form class="form update-form" method="POST" action="javascript:alert( 'success!' );">  -->
 
                                 {% csrf_token %} 
                                 <div class="form-group">
@@ -100,10 +100,10 @@
                                 </p>
                             </form>
                             
-                            <div class= "d-flex justify-content-around">
+                            <!-- <div class= "d-flex justify-content-around"> -->
                             <a class="update-link text-info"><small>Update</small></a>
                             <a class="remove-item text-danger" id="remove_{{ item.product.id }}"><small>Remove</small></a>
-                            </div>
+                            <!-- </div> -->
                         </td>
                         <td class="py-3">
                             <p class="my-0">£{{ item.product.price | calc_subtotal:item.quantity }}</p>
