--- a/templates/includes/toasts/toast_error.html
+++ b/templates/includes/toasts/toast_error.html
@@ -1,4 +1,4 @@
-<div class="toast custom-toast rounded-0 border-top-0" data-autohide="false">
+<!-- <div class="toast custom-toast rounded-0 border-top-0" data-autohide="false" role="alert">
     <div class="arrow-up arrow-danger"></div>
     <div class="w-100 toast-capper bg-danger"></div>
     <div class="toast-header bg-white text-dark">
@@ -10,4 +10,16 @@
     <div class="toast-body bg-white">
         {{ message }}        
     </div>
-</div>
+</div> -->
+
+<div class="toast custom-toast" role="alert" aria-live="assertive" aria-atomic="true">
+    <div class="toast-header">
+      <img src="..." class="rounded me-2" alt="...">
+      <strong class="me-auto">Bootstrap</strong>
+      <small>11 mins ago</small>
+      <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+    </div>
+    <div class="toast-body">
+      Hello, world! This is a toast message.
+    </div>
+  </div>
