--- a/templates/includes/toasts/toast_info.html
+++ b/templates/includes/toasts/toast_info.html
@@ -1,4 +1,4 @@
-<div class="toast custom-toast rounded-0 border-top-0" data-autohide="false">
+<!-- <div class="toast custom-toast rounded-0 border-top-0" data-autohide="false">
     <div class="arrow-up arrow-info"></div>
     <div class="w-100 toast-capper bg-info"></div>
     <div class="toast-header bg-white text-dark">
@@ -8,6 +8,21 @@
         </button>
     </div>
     <div class="toast-body bg-white">
-        {{ message }}        
+    </div>
+</div> -->
+
+<div class="toast" role="alert" aria-live="assertive" aria-atomic="true" data-bs-autohide="true" data-bs-delay="2000">
+    <div class="arrow-up"></div>
+    <div class="toast-header">
+        <p class="me-auto my-0">Info!</p>
+        <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+    </div>
+    <div class="toast-capper bg-primary"></div>
+    <div class="toast-body bg-white">
+        <div class="row">
+            <div class="col text-secondary">
+                {{ message }}
+            </div>
+        </div>
     </div>
 </div>
