--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -36,33 +36,6 @@
                         </td>
                         <td class="py-3 w-25">
 
-                            <!-- <form class="form update-form" method="POST" action="{% url 'adjust_bag' item.product_id %}">
-                                {% csrf_token %}
-                                <div class="form-group">
-                                    <div class="input-group">
-                                        <div class="input-group-prepend">
-                                            <button class="decrement-qty btn btn-sm btn-black rounded-0" 
-                                                data-item_id="{{ item.product_id }}" id="decrement-qty_{{ item.product_id }}">
-                                                <span>
-                                                    <i class="fas fa-minus fa-sm"></i>
-                                                </span>
-                                            </button>
-                                        </div>
-                                        <input class="form-control form-control-sm qty_input" type="number"
-                                            name="quantity" value="{{ item.quantity }}" min="1" max="99"
-                                            data-item_id="{{ item.product_id }}"
-                                            id="id_qty_{{ item.product_id }}">
-                                        <div class="input-group-append">
-                                            <button class="increment-qty btn btn-sm btn-black rounded-0"
-                                                data-item_id="{{ item.product_id }}" id="increment-qty_{{ item.product_id }}">
-                                                <span>
-                                                    <i class="fas fa-plus fa-sm"></i>
-                                                </span>
-                                            </button>
-                                        </div>
-                                    </div>
-                                </div>
-                            </form> -->
 
                             <form class="form update-form" method="POST" action="{% url 'adjust_bag' item.product.id  %}">
                             <!-- <form class="form update-form" method="POST" action="javascript:alert( 'success!' );">  -->
@@ -133,7 +106,7 @@
                                 </a>
                             </span>
                             <span class="category-icons">
-                                <a href="">
+                                <a href="{% url 'checkout' %}">
                                     <span class="text-uppercase">Secure Checkout</span>
                                     <span class="icon">
                                         <i class="bi bi-lock"></i>
