--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -2,6 +2,9 @@
 {% load static %}
 {% load bag_tools %}
 
+{% block extra_css %}
+    <link rel="stylesheet" href="{% static 'checkout/css/checkout.css' %}">
+{% endblock %}
 
 {% block content %}
 <div class="container-fluid h-100">
@@ -122,40 +125,8 @@
 </div>
 {% endblock %}
 {% block postloadjs %}
-{{block.super}}
-{% include 'products/includes/quantity_input_script.html' %}
-
-<script type="text/javascript">
-    // Update quantity on click
-    $('.update-link').click(function (e) {
-        console.log("woopsie");
-        var form = $(this).prev('.update-form');
-        // var form = $(this).prev();
-        // var form = $('.update-form');
-        console.log(form);
-        form.submit();
-    })
-
-    // $('.update-link').click(function(e) {
-    //     var form = $(this).prev('.update-form');
-    //     form.submit();
-    // })
-
-    // Remove item and reload on click
-    $('.remove-item').click(function (e) {
-        var csrfToken = "{{ csrf_token }}";
-        var itemId = $(this).attr('id').split('remove_')[1];
-        // var size = $(this).data('size');
-        var url = `/bag/remove/${itemId}/`;
-        // var data = {'csrfmiddlewaretoken': csrfToken, 'size': size};
-        var data = {
-            'csrfmiddlewaretoken': csrfToken
-        }
-        $.post(url, data)
-            .done(function () {
-                location.reload();
-            });
-    })
-</script>
-
+    {{ block.super }}
+    {{ stripe_public_key|json_script:"id_stripe_public_key" }}
+    {{ client_secret|json_script:"id_client_secret" }}
+    <script src="{% static 'checkout/js/stripe_elements.js' %}"></script>
 {% endblock %}
