--- a/templates/base.html
+++ b/templates/base.html
@@ -19,6 +19,9 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
   {% endblock %}
 
+  {% block extra_css %}
+  {% endblock %}
+  
   {% block corejs %}
   <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
@@ -28,6 +31,7 @@
   </script>
   <script src="https://code.jquery.com/jquery-3.6.1.min.js"
   integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
+  <script src="https://js.stripe.com/v3/"></script>
   {% endblock %}
 
   <title>Cowley Pottery {% block extra_title %}{% endblock %}</title>
@@ -60,15 +64,7 @@
   {% include 'includes/footer.html' %}
 
   {% block postloadjs %}
-    <!-- <script>
-      var toastElList = [].slice.call(document.querySelectorAll('.toast'))
-      var toastList = toastElList.map(function (toastEl) {
-        return new bootstrap.Toast(toastEl, option)
-      })
-    </script> -->
-    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
-    </script> -->
+
     <script type="text/javascript">
         $(document).ready(function () {
           $('.toast').toast('show');
