remove h-100 class from all containers on all templates except page container

--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 <div class="container-fluid h-100">
-    <div class="row h-100 text-center bg-white">
+    <div class="row text-center bg-white">
         <h1>Shopping Bag</h1>
     </div>
     <div class="row justify-content-center">
