--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <div class="container-fluid h-100">
-    <div class="row h-100 justify-content-center bg-white">
+    <div class="row justify-content-center bg-white">
         <!-- <div class="col-12 col-md-4 my-auto">
             <img class="img-fluid rounded-3" src="/media/homepage1.jpg" alt="Pottery examples">
         </div> -->
@@ -21,7 +21,7 @@
 
         </div>
     </div>
-    <div class="row h-100 justify-content-center px-2">
+    <div class="row justify-content-center px-2">
         <div class="col-12 col-md-4 col-xxl-3 pt-2">
             <img class="img-fluid rounded-3 tile-image" src="/media/helenwheel2.jpeg" alt="Pottery examples">
             <div class = "px-2 pt-2">
