--- a/products/templates/products/view_product.html
+++ b/products/templates/products/view_product.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <div class="container-fluid h-100">
-    <div class="row h-100 justify-content-center bg-white">
+    <div class="row justify-content-center bg-white">
         <!-- <div class="col-12 col-md-4 my-auto">
             <img class="img-fluid rounded-3" src="/media/homepage1.jpg" alt="Pottery examples">
         </div> -->
@@ -16,7 +16,7 @@
 
         </div>
     </div>
-    <div class="row h-100 justify-content-center px-2">
+    <div class="row justify-content-center px-2">
 
 
         <div class="col-12 col-sm-6 col-md-4 pt-2 pb-2">
