--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -8,7 +8,7 @@
 
 {% block content %}
 <div class="container-fluid h-100">
-    <div class="row h-100 text-center bg-white">
+    <div class="row text-center bg-white">
         <h1>Checkout</h1>
     </div>
 
