--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <div class="container-fluid h-100">
-    <div class="row h-100 justify-content-center bg-white">
+    <div class="row justify-content-center bg-white">
         <!-- <div class="col-12 col-md-4 my-auto">
             <img class="img-fluid rounded-3" src="/media/homepage1.jpg" alt="Pottery examples">
         </div> -->
