--- a/products/templates/products/shop.html
+++ b/products/templates/products/shop.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <div class="container-fluid h-100">
-    <div class="row h-100 justify-content-center bg-white">
+    <div class="row justify-content-center bg-white">
         <!-- <div class="col-12 col-md-4 my-auto">
             <img class="img-fluid rounded-3" src="/media/homepage1.jpg" alt="Pottery examples">
         </div> -->
@@ -21,7 +21,7 @@
 
         </div>
     </div>
-    <div class="row h-100 justify-content-around">
+    <div class="row justify-content-around">
         <div class="col-12 col-md-6 col-xxl-4">
             <div class="card text-bg-dark">
                 <img class="img-thumbnail" src="/media/all.jpg" class="card-img" alt="Lots of different pottery">
@@ -49,7 +49,7 @@
             </div>
         </div>
     </div>
-    <div class="row h-100 justify-content-center px-2">
+    <div class="row justify-content-center px-2">
         {% for category in categories %}
 
 
