--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -14,7 +14,7 @@
                     <a class="nav-link" href="{% url 'shop' %}">Shop</a>
                 </li>
                 <li class="nav-item my-auto">
-                    <a class="nav-link" href="#">About</a>
+                    <a class="nav-link" href="{% url 'about' %}">About</a>
                 </li>
                 <li class="nav-item dropdown my-auto">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
