--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content %}
-<div class="container-fluid h-100">
+<div class="container-fluid h-100 page-container">
     <div class="row justify-content-center bg-white">
         <!-- <div class="col-12 col-md-4 my-auto">
             <img class="img-fluid rounded-3" src="/media/homepage1.jpg" alt="Pottery examples">
@@ -23,53 +23,64 @@
     </div>
     <div class="row justify-content-center px-2">
         <div class="col-12 col-md-4 col-xxl-3 pt-2">
-            <img class="img-fluid rounded-3 tile-image" src="/media/helenwheel2.jpeg" alt="Pottery examples">
-            <div class = "px-2 pt-2">
-            <h2 class="text-center">
-                About 
-            </h2>
-            <p>
-                Cowley Pottery is my passion project with all pieces made by my little hands in my little studio.
-                <br>
-                If you'd like to hear more about my story please click here
-            </p>
+            <div class="tile-image-container">
+                <img class="img-fluid rounded-3 tile-image" src="/media/helenwheel2.jpeg" alt="Pottery examples">
+            </div>
+            <div class="tile-text-container px-2 pt-2">
+                <h2 class="text-center">
+                    About
+                </h2>
+                <p>
+                    Cowley Pottery is my passion project with all pieces made by my little hands in my little studio.
+                    <br>
+                    If you'd like to hear more about my story please click here
+                </p>
             </div>
 
-        <!-- </div> -->
-        <!-- <div class="col-12 col-md-4 my-auto"> -->
-            
+            <!-- </div> -->
+            <!-- <div class="col-12 col-md-4 my-auto"> -->
+
         </div>
         <div class="col-12 col-md-4 col-xxl-3 pt-2">
-            <img class="img-fluid rounded-3 tile-image" src="/media/bluemugfade.jpg" alt="Pottery examples">
-            <div class = "px-2 pt-2">
-            <h2 class="text-center">
-                Visit the shop
-            </h2>
-            <p>
-                Welcome to Cowley Pottery. In the heart of Devon, Helen crafts by hand all pieces from scratch in her
-                tiny little studio barely big enough for one person. If you'd like to see recent creations please visit
-                the shop. 
-                <br>
-                Feel free to get in contact about any pieces you want but are unavailable and I'll get back to you.
-            </p>
+            <div class="tile-image-container">
+                <img class="img-fluid rounded-3 tile-image" src="/media/bluemugfade.jpg" alt="Pottery examples">
             </div>
-        <!-- </div> -->
-        <!-- <div class="col-12 col-md-4 my-auto"> -->
-            
+            <div class="tile-text-container px-2 pt-2">
+                <h2 class="text-center">
+                    Visit the shop
+                </h2>
+                <p>
+                    Welcome to Cowley Pottery. In the heart of Devon, Helen crafts by hand all pieces from scratch in
+                    her
+                    tiny little studio barely big enough for one person. If you'd like to see recent creations please
+                    visit
+                    the shop.
+                    <br>
+                    Feel free to get in contact about any pieces you want but are unavailable and I'll get back to you.
+                </p>
+            </div>
+            <!-- </div> -->
+            <!-- <div class="col-12 col-md-4 my-auto"> -->
+
         </div>
         <div class="col-12 col-md-4 col-xxl-3 pt-2">
-            <img class="img-fluid rounded-3 tile-image image-top-align" src="/media/dwarvesfire.JPG" alt="Pottery examples">
-            <div class = "px-2 pt-2">
-            <h2 class="text-center">
-                Commissions
-            </h2>
-            <p>
-                I'm happy to create items that are personalised or follow you specifications. On this page you will find a form to enter you details and request and I will get back to you
-            </p>
+            <div class="tile-image-container">
+
+                <img class="img-fluid rounded-3 tile-image image-top-align" src="/media/dwarvesfire.JPG"
+                    alt="Pottery examples">
             </div>
-        <!-- </div> -->
-        <!-- <div class="col-12 col-md-4 my-auto"> -->
-            
+            <div class="tile-text-container px-2 pt-2">
+                <h2 class="text-center">
+                    Commissions
+                </h2>
+                <p>
+                    I'm happy to create items that are personalised or follow you specifications. On this page you will
+                    find a form to enter you details and request and I will get back to you
+                </p>
+            </div>
+            <!-- </div> -->
+            <!-- <div class="col-12 col-md-4 my-auto"> -->
+
         </div>
     </div>
 </div>
