--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -14,9 +14,16 @@
                         <li>EX13 7SD</li>
                         <li>
                             <ul>
-                                <li class="d-inline-block"><a class="nav-link" href="#"><i class="bi bi-facebook"></i></a>
+                                <li class="d-inline-block"><a class="nav-link"
+                                        href="https://www.facebook.com/people/Cowley-Pottery/100086994200228/"
+                                        rel="noopener" target="_blank"
+                                        aria-label="Go to our Facebook page (opens in a new tab)">><i
+                                            class="bi bi-facebook"></i></a>
                                 </li>
-                                <li class="d-inline-block"><a class="nav-link" href="#"><i class="bi bi-instagram"></i></a>
+                                <li class="d-inline-block"><a class="nav-link"
+                                        href="https://www.instagram.com/cowleypottery/" rel="noopener" target="_blank"
+                                        aria-label="Go to our Instagram page (opens in a new tab)"><i
+                                            class="bi bi-instagram"></i></a>
                                 </li>
                             </ul>
                         </li>
