--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -4,9 +4,6 @@
 {% block content %}
 <div class="container-fluid h-100 page-container">
     <div class="row justify-content-center bg-white">
-        <!-- <div class="col-12 col-md-4 my-auto">
-            <img class="img-fluid rounded-3" src="/media/homepage1.jpg" alt="Pottery examples">
-        </div> -->
         <div class="col-12 col-md-6 my-auto text-center">
             <h1>
                 Welcome to Cowley Pottery
@@ -24,11 +21,13 @@
     <div class="row justify-content-center px-2">
         <div class="col-12 col-md-4 col-xxl-3 pt-2">
             <div class="tile-image-container">
-                <img class="img-fluid rounded-3 tile-image" src="/media/helenwheel2.jpeg" alt="Pottery examples">
+                <a href="{% url 'about' %}">
+                    <img class="img-fluid rounded-3 tile-image" src="/media/helenwheel2.jpeg" alt="Pottery examples">
+                </a>
             </div>
             <div class="tile-text-container px-2 pt-2">
                 <h2 class="text-center">
-                    About
+                    <a href="{% url 'about' %}">About</a>
                 </h2>
                 <p>
                     Cowley Pottery is my passion project with all pieces made by my little hands in my little studio.
@@ -36,19 +35,17 @@
                     If you'd like to hear more about my story please click here
                 </p>
             </div>
-
-            <!-- </div> -->
-            <!-- <div class="col-12 col-md-4 my-auto"> -->
-
         </div>
         <div class="col-12 col-md-4 col-xxl-3 pt-2">
             <div class="tile-image-container">
-                <img class="img-fluid rounded-3 tile-image" src="/media/bluemugfade.jpg" alt="Pottery examples">
+                <a href="{% url 'shop' %}">
+                    <img class="img-fluid rounded-3 tile-image" src="/media/bluemugfade.jpg" alt="Pottery examples">
+                </a>
             </div>
             <div class="tile-text-container px-2 pt-2">
-                <h2 class="text-center">
-                    Visit the shop
-                </h2>
+                    <h2 class="text-center">
+                        <a href="{% url 'shop' %}">Visit the shop</a>
+                    </h2>
                 <p>
                     Welcome to Cowley Pottery. In the heart of Devon, Helen crafts by hand all pieces from scratch in
                     her
@@ -59,9 +56,6 @@
                     Feel free to get in contact about any pieces you want but are unavailable and I'll get back to you.
                 </p>
             </div>
-            <!-- </div> -->
-            <!-- <div class="col-12 col-md-4 my-auto"> -->
-
         </div>
         <div class="col-12 col-md-4 col-xxl-3 pt-2">
             <div class="tile-image-container">
@@ -78,9 +72,6 @@
                     find a form to enter you details and request and I will get back to you
                 </p>
             </div>
-            <!-- </div> -->
-            <!-- <div class="col-12 col-md-4 my-auto"> -->
-
         </div>
     </div>
 </div>
