--- a/templates/base.html
+++ b/templates/base.html
@@ -34,6 +34,14 @@
   <script src="https://js.stripe.com/v3/"></script>
   {% endblock %}
 
+  <script id="mcjs">
+    ! function (c, h, i, m, p) {
+        m = c.createElement(h), p = c.getElementsByTagName(h)[0], m.async = 1, m.src = i, p.parentNode.insertBefore(m,
+            p)
+    }(document, "script",
+        "https://chimpstatic.com/mcjs-connected/js/users/7527a58e8c503cf92b8c64552/d7e87e7aea65f93785bab3e2e.js");
+  </script>
+
   <title>Cowley Pottery {% block extra_title %}{% endblock %}</title>
 </head>
 
