--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -1,5 +1,5 @@
 <footer>
-    <div class="row h-100 justify-content-center bg-white mx-0">
+    <div class="row h-100 justify-content-center bg-white mx-0 footer-container">
         <div class="col-12 col-md-4 my-auto px-2">
             <h2>
                 Cowley Pottery
@@ -17,7 +17,7 @@
                                 <li class="d-inline-block"><a class="nav-link"
                                         href="https://www.facebook.com/people/Cowley-Pottery/100086994200228/"
                                         rel="noopener" target="_blank"
-                                        aria-label="Go to our Facebook page (opens in a new tab)">><i
+                                        aria-label="Go to our Facebook page (opens in a new tab)"><i
                                             class="bi bi-facebook"></i></a>
                                 </li>
                                 <li class="d-inline-block"><a class="nav-link"
@@ -33,7 +33,7 @@
 
         </div>
         <div class="col-12 col-md-4 my-auto px-2">
-            <form>
+            <form class="mb-5">
                 <h2>
                     Newsletter
                 </h2>
