--- a/templates/base_landing.html
+++ b/templates/base_landing.html
@@ -21,6 +21,14 @@
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     {% endblock %}
 
+    <script id="mcjs">
+      ! function (c, h, i, m, p) {
+          m = c.createElement(h), p = c.getElementsByTagName(h)[0], m.async = 1, m.src = i, p.parentNode.insertBefore(m,
+              p)
+      }(document, "script",
+          "https://chimpstatic.com/mcjs-connected/js/users/7527a58e8c503cf92b8c64552/d7e87e7aea65f93785bab3e2e.js");
+    </script>
+
     <title>Cowley Pottery {% block extra_title %}{% endblock %}</title>
   </head>
   <body>
