add styles to order confirmation page

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -47,11 +47,7 @@
                         <a href="{% url 'shop' %}">Visit the shop</a>
                     </h2>
                 <p>
-                    Welcome to Cowley Pottery. In the heart of Devon, Helen crafts by hand all pieces from scratch in
-                    her
-                    tiny little studio barely big enough for one person. If you'd like to see recent creations please
-                    visit
-                    the shop.
+                    In the heart of Devon, Helen crafts by hand all pieces from scratch in her studio. See her latest creations here.
                     <br>
                     Feel free to get in contact about any pieces you want but are unavailable and I'll get back to you.
                 </p>
