--- a/static/css/base.css
+++ b/static/css/base.css
@@ -51,7 +51,7 @@ td {
 }
 
 .page-container{
-    min-height: 80vh;
+    min-height: 90vh;
 }
 
 /* .tile-image-container{
@@ -228,4 +228,12 @@ footer li {
     position: absolute;
     top: -10px;
     right: 36px;
+}
+
+#mc_embed_signup{
+    background:#fff;
+    clear:left;
+    font:14px Helvetica,Arial,sans-serif;
+    /* width:600px; */
+    width:100%;
 }
