--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -6,18 +6,32 @@
 {% endblock %}
 
 {% block content %}
-    <div class="overlay"></div>
-    <div class="container">
-        <div class="row">
-            <div class="col">
+    <!-- <div class="page-container container-fluid">
+        <div class="row justify-content-center">
+            <div class="col-12 col-md-6">
                 <hr>
                 <h2 class="logo-font mb-4">Thank You</h2>
                 <hr>
                 <p class="text-black">Your order information is below. A confirmation email will be sent to <strong>{{ order.email }}</strong>.</p>
             </div>
-        </div>
+        </div> -->
 
-        <div class="row">
+        <div class="container-fluid h-100 page-container">
+            <div class="row justify-content-center bg-white">
+                <div class="col-12 col-md-6 my-auto text-center">
+                    <h1>
+                        Thank you
+                    </h1>
+                    <p>
+                        Your order information is below :)
+                        <br>
+                        A confirmation email will be sent to <strong>{{ order.email }}</strong>.
+                    </p>
+        
+                </div>
+            </div>
+
+        <div class="row justify-content-center mt-2">
             <div class="col-12 col-lg-7">
                 <div class="order-confirmation-wrapper p-2 border">
                     <div class="row">
@@ -58,7 +72,7 @@
                             </p>
                         </div>
                         <div class="col-12 col-md-8 text-md-right">
-                            <p class="small mb-0">{{ item.quantity }} @ ${{ item.product.price }} each</p>
+                            <p class="small mb-0">{{ item.quantity }} @ £{{ item.product.price }} each</p>
                         </div>
                     </div>
                     {% endfor %}
@@ -158,7 +172,7 @@
                             <p class="mb-0 text-black font-weight-bold">Order Total</p>
                         </div>
                         <div class="col-12 col-md-8 text-md-right">
-                            <p class="mb-0">{{ order.order_total }}</p>
+                            <p class="mb-0">£{{ order.order_total }}</p>
                         </div>
                     </div>
 
@@ -167,7 +181,7 @@
                             <p class="mb-0 text-black font-weight-bold">Delivery</p>
                         </div>
                         <div class="col-12 col-md-8 text-md-right">
-                            <p class="mb-0">{{ order.delivery_cost }}</p>
+                            <p class="mb-0">£{{ order.delivery_cost }}</p>
                         </div>
                     </div>
 
@@ -176,27 +190,27 @@
                             <p class="mb-0 text-black font-weight-bold">Grand Total</p>
                         </div>
                         <div class="col-12 col-md-8 text-md-right">
-                            <p class="mb-0">{{ order.grand_total }}</p>
+                            <p class="mb-0">£{{ order.grand_total }}</p>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="row">
+        <div class="row justify-content-center">
 			<div class="col-12 col-lg-7 text-right">
                 {% if from_profile %}
                 <a href="{% url 'profile' %}" class="btn btn-black rounded-0 my-2">
                     <span class="icon mr-2">
                         <i class="fas fa-gifts"></i>
                     </span>
-                    <span class="text-uppercase">Now check out the latest deals!</span>
+                    <span class="text-uppercase">Return to your profile</span>
                 </a>
                 {% else %}
                     <a href="{% url 'shop' %}" class="btn btn-black rounded-0 my-2">
                         <span class="icon mr-2">
                             <i class="fas fa-gifts"></i>
                         </span>
-                        <span class="text-uppercase">Now check out the latest deals!</span>
+                        <span class="text-uppercase">Return to the shop</span>
                     </a>
                 {% endif %}
 			</div>
