--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -18,7 +18,7 @@
 
         </div>
     </div>
-    <div class="row justify-content-center px-2">
+    <div class="row justify-content-center px-2 pb-5">
         <div class="col-12 col-md-4 col-xxl-3 pt-2">
             <div class="tile-image-container">
                 <a href="{% url 'about' %}">
@@ -30,7 +30,7 @@
                     <a href="{% url 'about' %}">About</a>
                 </h2>
                 <p>
-                    Cowley Pottery is my passion project with all pieces made by my little hands in my little studio.
+                    Cowley Pottery is my passion project with all pieces made by my hands in my little studio.
                     <br>
                     If you'd like to hear more about my story please click here
                 </p>
@@ -48,8 +48,6 @@
                     </h2>
                 <p>
                     In the heart of Devon, Helen crafts by hand all pieces from scratch in her studio. See her latest creations here.
-                    <br>
-                    Feel free to get in contact about any pieces you want but are unavailable and I'll get back to you.
                 </p>
             </div>
         </div>
@@ -64,7 +62,7 @@
                     Commissions
                 </h2>
                 <p>
-                    I'm happy to create items that are personalised or follow you specifications. On this page you will
+                    I'm happy to create items that are personalised or follow your specifications. On this page you will
                     find a form to enter you details and request and I will get back to you
                 </p>
             </div>
