style about page and add page title styles

--- a/home/templates/home/about.html
+++ b/home/templates/home/about.html
@@ -4,17 +4,17 @@
 {% block content %}
 <div class="container-fluid h-100">
     <div class="row justify-content-center bg-white">
-        <div class="col-12 col-md-6 my-auto text-center">
+        <div class="col-12 col-md-6 my-auto text-center page-title">
             <h1>
-                About us
+                About
             </h1>
         </div>
     </div>
     <div class="row justify-content-center px-2">
-        <div class="col-6">
-            <img src="/media/Stall.jpg">
+        <div class="col-12 col-lg-6 mx-auto d-flex justify-content-center">
+            <img class="img-fluid" src="/media/about.jpg">
         </div>
-        <div class="col-6">
+        <div class="col-12 col-lg-6 about-text">
         <p>
             I was late coming to the pottery party. It was first suggested to me as a new hobby by my daughter whilst
             she was at university. I was finding the empty nest hard to deal with. Rather than try pottery I decided to
