--- a/products/templates/products/shop.html
+++ b/products/templates/products/shop.html
@@ -4,9 +4,7 @@
 {% block content %}
 <div class="container-fluid h-100">
     <div class="row justify-content-center bg-white">
-        <!-- <div class="col-12 col-md-4 my-auto">
-            <img class="img-fluid rounded-3" src="/media/homepage1.jpg" alt="Pottery examples">
-        </div> -->
+
         <div class="col-12 col-md-6 my-auto text-center">
             <h1>
                 Welcome to Cowley Pottery
@@ -54,7 +52,7 @@
 
 
 
-        <div class="col-12 col-md-4 col-xxl-3 pt-2 pb-2">
+        <div class="col-sm-6 col-md-3 col-xxl-3 pt-2 pb-2">
             <div class="card text-bg-dark  ratio-4x3">
                 <img class="img-thumbnail shop-tile rounded-3" src="/media/{{category.image }}" alt="{{category.name}} image">
                 <div class="tile-overlay">
