--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -7,7 +7,7 @@
 
 {% block content %}
 <div class="container-fluid h-100">
-    <div class="row text-center bg-white">
+    <div class="row text-center bg-white page-title">
         <h1>Profile</h1>
     </div>
     <div class="row">
