add commissions app including view, base template, base model and form. Add to admin site

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -53,13 +53,14 @@
         </div>
         <div class="col-12 col-md-4 col-xxl-3 pt-2">
             <div class="tile-image-container">
-
+                <a href="{% url 'commissions' %}">
                 <img class="img-fluid rounded-3 tile-image image-top-align" src="/media/dwarvesfire.JPG"
                     alt="Pottery examples">
+                </a>
             </div>
             <div class="tile-text-container px-2 pt-2">
                 <h2 class="text-center">
-                    Commissions
+                    <a href="{% url 'commissions' %}">Commissions</a>
                 </h2>
                 <p>
                     I'm happy to create items that are personalised or follow your specifications. On this page you will
