add commissions success page and view

--- a/commissions/templates/commissions/commissions_success.html
+++ b/commissions/templates/commissions/commissions_success.html
@@ -1,9 +1,20 @@
+{% extends "base.html" %}
+{% load static %}
+
+{% block content %}
+
+
 <div class="container-fluid h-100">
-    <div class="row justify-content-center bg-white">
+    <div class="row justify-content-center bg-white mb-5">
         <div class="col-12 col-md-6 my-auto text-center page-title">
             <h1>
-                About
+                Thanks for the request.
             </h1>
+            <h2>
+                I'll get back to you as soon as possible.
+            </h2>
         </div>
     </div>
 </div>
+
+{% endblock %}
