--- a/commissions/templates/commissions/commissions.html
+++ b/commissions/templates/commissions/commissions.html
@@ -13,9 +13,12 @@
     </div>
 </div>
 
-<div class="row">
-    <div class="col-12 col-lg-6">
-        <p class="text-muted">Default Delivery Information</p>
+<div class="row justify-content-center">
+    <div class="col-6">
+        <p class="mt-3">
+            If you see something on the website that is out of stock, or you want something bespoke or personalised,
+            fill in the form below and I will get back to you as soon as possible.
+        </p>
         <form class="mt-3" action="{% url 'commissions' %}" method="POST">
             {% csrf_token %}
             {{ form|crispy }}
