--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -24,7 +24,8 @@
                     <ul class="dropdown-menu">
                         {% if request.user.is_authenticated %}
                         {% if request.user.is_superuser %}
-                        <li><a href="{% url 'add_product' %}" class="dropdown-item">Product Management</a></li>
+                        <li><a href="{% url 'add_product' %}" class="dropdown-item">Add Product</a></li>
+                        <li><a href="{% url 'commissions_list' %}" class="dropdown-item">Commission Requests</a></li>
                         {% endif %}
                         <li><a href="{% url 'profile' %}" class="dropdown-item">My Profile</a></li>
                         <li><a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a></li>
