add tile frame to images

--- a/home/templates/home/about.html
+++ b/home/templates/home/about.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content %}
-<div class="container-fluid h-100">
+<div class="container-fluid h-100 page-container">
     <div class="row justify-content-center bg-white">
         <div class="col-12 col-md-6 my-auto text-center page-title">
             <h1>
@@ -10,9 +10,9 @@
             </h1>
         </div>
     </div>
-    <div class="row justify-content-center px-2">
+    <div class="row justify-content-center px-2 py-3">
         <div class="col-12 col-lg-6 mx-auto d-flex justify-content-center">
-            <img class="img-fluid" src="/media/about.jpg">
+            <img class="img-fluid img-thumbnail" src="/media/about.jpg">
         </div>
         <div class="col-12 col-lg-6 about-text">
         <p>
