--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -22,7 +22,7 @@
         <div class="col-12 col-md-4 col-xxl-3 pt-2">
             <div class="tile-image-container">
                 <a href="{% url 'about' %}">
-                    <img class="img-fluid rounded-3 tile-image" src="/media/helenwheel2.jpeg" alt="Pottery examples">
+                    <img class="img-fluid rounded-3 tile-image img-thumbnail" src="/media/helenwheel2.jpeg" alt="Pottery examples">
                 </a>
             </div>
             <div class="tile-text-container px-2 pt-2">
@@ -39,7 +39,7 @@
         <div class="col-12 col-md-4 col-xxl-3 pt-2">
             <div class="tile-image-container">
                 <a href="{% url 'shop' %}">
-                    <img class="img-fluid rounded-3 tile-image" src="/media/bluemugfade.jpg" alt="Pottery examples">
+                    <img class="img-fluid rounded-3 tile-image img-thumbnail" src="/media/bluemugfade.jpg" alt="Pottery examples">
                 </a>
             </div>
             <div class="tile-text-container px-2 pt-2">
@@ -54,7 +54,7 @@
         <div class="col-12 col-md-4 col-xxl-3 pt-2">
             <div class="tile-image-container">
                 <a href="{% url 'commissions' %}">
-                <img class="img-fluid rounded-3 tile-image image-top-align" src="/media/dwarvesfire.JPG"
+                <img class="img-fluid rounded-3 tile-image image-top-align img-thumbnail" src="/media/dwarvesfire.JPG"
                     alt="Pottery examples">
                 </a>
             </div>
