--- a/commissions/templates/commissions/commissions.html
+++ b/commissions/templates/commissions/commissions.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 
-<div class="container-fluid h-100">
+<div class="container-fluid h-100 page-container">
     <div class="row justify-content-center bg-white">
         <div class="col-12 col-md-6 my-auto text-center page-title">
             <h1>
@@ -11,19 +11,20 @@
             </h1>
         </div>
     </div>
-</div>
 
-<div class="row justify-content-center">
-    <div class="col-6">
-        <p class="mt-3">
-            If you see something on the website that is out of stock, or you want something bespoke or personalised,
-            fill in the form below and I will get back to you as soon as possible.
-        </p>
-        <form class="mt-3" action="{% url 'commissions' %}" method="POST">
-            {% csrf_token %}
-            {{ form|crispy }}
-            <button class="btn btn-black rounded-0 text-uppercase float-right">Send request</button>
-        </form>
+
+    <div class="row justify-content-center">
+        <div class="col-6">
+            <p class="mt-3">
+                If you see something on the website that is out of stock, or you want something bespoke or personalised,
+                fill in the form below and I will get back to you as soon as possible.
+            </p>
+            <form class="mt-3" action="{% url 'commissions' %}" method="POST">
+                {% csrf_token %}
+                {{ form|crispy }}
+                <button class="btn btn-black rounded-0 text-uppercase float-right">Send request</button>
+            </form>
+        </div>
     </div>
 </div>
 {% endblock %}
