--- a/commissions/templates/commissions/commissions_list.html
+++ b/commissions/templates/commissions/commissions_list.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 
-<div class="container-fluid h-100">
+<div class="container-fluid h-100 page-container">
     <div class="row justify-content-center bg-white">
         <div class="col-12 col-md-6 my-auto text-center page-title">
             <h1>
@@ -11,31 +11,31 @@
             </h1>
         </div>
     </div>
+
+
+    <table class="table table-secondary table-striped">
+        <thead>
+            <tr>
+                <th scope="col">Name</th>
+                <th scope="col">Email</th>
+                <th scope="col">Detail</th>
+                <th scope="col">Responded</th>
+            </tr>
+        </thead>
+        <tbody>
+
+            {% for commission in commission_list %}
+            <tr>
+                <td>{{ commission.name }}</td>
+                <td>{{ commission.email }}</td>
+                <td>{{ commission.details }}</td>
+                <td>{{ commission.responded }}</td>
+            </tr>
+
+            {% endfor %}
+
+
+        </tbody>
+    </table>
 </div>
-
-<table class="table table-secondary table-striped">
-    <thead>
-        <tr>
-            <th scope="col">Name</th>
-            <th scope="col">Email</th>
-            <th scope="col">Detail</th>
-            <th scope="col">Responded</th>
-        </tr>
-    </thead>
-    <tbody>
-
-        {% for commission in commission_list %}
-        <tr>
-            <td>{{commission.name}}</td>
-            <td>{{ commission.email }}</td>
-            <td>{{ commission.details }}</td>
-            <td>{{ commission.responded }}</td>
-        </tr>
-
-        {% endfor %}
-
-
-    </tbody>
-</table>
-
 {% endblock %}
