--- a/commissions/templates/commissions/commissions_success.html
+++ b/commissions/templates/commissions/commissions_success.html
@@ -4,7 +4,7 @@
 {% block content %}
 
 
-<div class="container-fluid h-100">
+<div class="container-fluid h-100 page-container">
     <div class="row justify-content-center bg-white mb-5">
         <div class="col-12 col-md-6 my-auto text-center page-title">
             <h1>
