--- a/products/templates/products/view_product.html
+++ b/products/templates/products/view_product.html
@@ -3,7 +3,7 @@
 {% load product_tools %}
 
 {% block content %}
-<div class="container-fluid h-100">
+<div class="container-fluid h-100 page-container">
     <div class="row justify-content-center bg-white">
         <!-- <div class="col-12 col-md-4 my-auto">
             <img class="img-fluid rounded-3" src="/media/homepage1.jpg" alt="Pottery examples">
@@ -44,6 +44,7 @@
                 {% csrf_token %}
                 <div class="form-row">
                     <div class="col-12">
+                        <p class="mt-3"><strong>Available: {{stock_check | stock_left:product}}</strong></p>
                         <p class="mt-3"><strong>Quantity:</strong></p>
                         <div class="form-group w-50">
                             <div class="input-group">
@@ -68,7 +69,7 @@
                                         </span>
                                     </button>
                                 </div>
-                                <p id="stock_qty_{{product.id}}">
+                                <p class="d-none" id="stock_qty_{{product.id}}">
                                         {{stock_check | stock_left:product}}
                                 </p>
                             </div>
