--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -16,6 +16,9 @@
                 <li class="nav-item my-auto">
                     <a class="nav-link" href="{% url 'about' %}">About</a>
                 </li>
+                <li class="nav-item my-auto">
+                    <a class="nav-link" href="{% url 'commissions' %}">Commissions</a>
+                </li>
                 <li class="nav-item dropdown my-auto">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                         aria-expanded="false">
