add tick or cross to responded

--- a/products/templates/products/shop.html
+++ b/products/templates/products/shop.html
@@ -7,7 +7,7 @@
 
         <div class="col-12 col-md-6 my-auto text-center">
             <h1>
-                Welcome to Cowley Pottery
+                Welcome to Cowley Pottery!
             </h1>
             <p>
                 Welcome to Cowley Pottery. In the heart of Devon, Helen crafts by hand all pieces from scratch in her
