--- a/commissions/templates/commissions/commissions_list.html
+++ b/commissions/templates/commissions/commissions_list.html
@@ -29,7 +29,11 @@
                 <td>{{ commission.name }}</td>
                 <td>{{ commission.email }}</td>
                 <td>{{ commission.details }}</td>
-                <td>{{ commission.responded }}</td>
+                {% if commission.responded %}
+                    <td class="h5"><i class="bi bi-check"></i></td>
+                {% else %}
+                    <td class="h5"><i class="bi bi-x"></i></td>
+                {% endif %}
             </tr>
 
             {% endfor %}
