--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -6,7 +6,7 @@
     <div class="row justify-content-center bg-white">
         <div class="col-12 col-md-6 my-auto text-center">
             <h1>
-                Welcome to Cowley Pottery
+                Welcome to Cowley Pottery!
             </h1>
             <p>
                 Welcome to Cowley Pottery. In the heart of Devon, Helen crafts by hand all pieces from scratch in her
