--- a/products/templates/products/shop.html
+++ b/products/templates/products/shop.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content %}
-<div class="container-fluid h-100">
+<div class="container-fluid h-100 page-container">
     <div class="row justify-content-center bg-white">
 
         <div class="col-12 col-md-6 my-auto text-center">
